# TimoshenkoBeamEigenvalues

./: .gitignore  CMakeLists.txt  CheatSheetCmake.sh  LICENSE  Makefile  NewbieConfig.h.in  README.md  arclengthfig.C  arclengthfig.c  arclengthfig.cxx  arclengthfig.m  build_script  circular_cross_section.C  circular_cross_section.cxx  clamped_clamped.C  frequency_equation.C  frequency_equation.c  frequency_equation.h  frequency_equation_cc.C  frequency_equation_cc.c  frequency_equation_cc.h  frequency_equation_cf.C  frequency_equation_cf.c  frequency_equation_cf.h  interpolate.C  make_iteration_fig.m  pipe_timoshenko.C  pipe_timoshenko.c  pseudoarclength.C  pseudoarclength.c  rectangular_cross_section.cxx  rectangular_timoshenko.C  rectangular_timoshenko.c  secular.C  secular.c  secular.h  timoshenko_wave_numbers.C  timoshenko_wave_numbers.c  timoshenko_wave_numbers.h  wave_frequency_equation.C  (+6 more)
src/: CMakeLists.txt  arclengthcontinuation.cpp  clamped_clamped.cpp  clamped_free.cpp  frequency_equation.cpp  secular.cpp  secular.h  secular.hpp  timoshenko_wave_numbers.C  timoshenko_wave_numbers.hpp  wave_frequency_equation.C  wave_frequency_equation.cpp  wave_number.C  wave_number.h  wave_number_gradients.C
